maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:8: error: reassignment to val
                etat = 1;
                     ^IslandMaze:10: error: reassignment to val
                etat = 0;
                     ^IslandMaze:49: error: reassignment to val
    pasDeMurNord = (getDirection() == Direction.NORTH && estFaceMur());
                 ^